# codex-monitor

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.ja.md  README.ko.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/adr/: 0001-local-logs-rust-tauri.md
.planning/debug/resolved/: lulu-drag-stutter.md  subagent-token-overcount.md
.planning/phases/01-core-parser-and-cli/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-REVIEW.md  01-SKELETON.md  01-VERIFICATION.md
.planning/quick/260708-e3t-update-readme-with-chinese-korean-japane/: 260708-e3t-PLAN.md  260708-e3t-SUMMARY.md
.planning/quick/260708-erg-create-four-detailed-readme-files-for-ch/: 260708-erg-PLAN.md  260708-erg-SUMMARY.md
.planning/quick/260708-f57-publish-separate-github-releases-for-lin/: 260708-f57-PLAN.md  260708-f57-SUMMARY.md
.planning/quick/260708-fdg-rename-readme-capybara-companion-referen/: 260708-fdg-PLAN.md  260708-fdg-SUMMARY.md
.planning/quick/260708-jga-reduce-lulu-pet-minimum-size-by-half/: 260708-jga-PLAN.md  260708-jga-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/codex-token-cli/: Cargo.toml
crates/codex-token-core/: Cargo.toml
crates/codex-token-desktop/: Cargo.toml  tauri.conf.json
crates/codex-token-desktop/capabilities/: default.json
crates/codex-token-desktop/src/: main.rs
crates/codex-token-desktop/ui/: app.js  index.html  styles.css
fixtures/codex-home/: auth.json
(+10 files in other folders)
