[package]
name = "codex-token-desktop"
version = "0.1.2"
edition.workspace = true
license.workspace = true
default-run = "codex-token-desktop"

[[bin]]
name = "codex-token-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
codex-token-core = { path = "../codex-token-core" }
serde.workspace = true
tauri.workspace = true
